@@ -4,6 +4,10 @@ Changelog
 3.2 - Unreleased
 ----------------
 
+- Fix 'NoneType' object has no attribute 'absolute_url' when actions are 
+  called directly from a viewlet: aq_parant(folder) was an instance of viewlet.
+  [encolpe]
+
 - Fixed Forbidden error when attempting to login for the first time as a newly
   created user, if the must_change_password property has been added (as a
   Boolean) to the portal_memberdata tool and set to True.
